--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
     "@types/node": "^16.18.21",
     "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
+    "components": "^0.1.0",
+    "i18next": "^22.4.13",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
+    "js-cookie": "^3.0.1",
+    "mobx": "^5.15.7",
+    "mobx-react": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +52,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/history": "^5.0.0",
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.26"
   }
 }
